@@ -1,3 +1,9 @@
+2007-01-01 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCast.c (createDo): backPatchLabels() needs falseLabel in
+	empty 'while'-loop to work correctly, see regression test 'while.c'
+	* support/regression/tests/while.c: added
+
 2007-01-01 Borut Razem <borut.razem AT siol.net>
 
 	* support/cpp2/libcpp/directives.c, support/cpp2/libcpp/identifiers.c,
@@ -71,6 +77,7 @@
 	  and flex are not installed, 2nd try
 
 2006-12-30 Bernhard Held <bernhard AT bernhardheld.de>
+
 	* src/mcs51/peeph.def: renamed rule 400 to 500, moved rule 253.x to
 	400.x for better code in RFE 899102
 
